cabal-version:       >=1.10
name:                copilot-libraries
version:             3.19.1
synopsis:            Libraries for the Copilot language.
description:
  Libraries for the Copilot language.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

license:             BSD3
license-file:        LICENSE
author:              Frank Dedden, Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordby Wegmann, Ivan Perez
maintainer:          Ivan Perez <ivan.perezdominguez@nasa.gov>
homepage:            https://copilot-language.github.io
bug-reports:         https://github.com/Copilot-Language/copilot/issues
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md, CHANGELOG

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot.git
    subdir:     copilot-libraries

library
  default-language: Haskell2010

  hs-source-dirs: src

  build-depends: base             >= 4.9    && < 5

               , containers       >= 0.4    && < 0.7
               , mtl              >= 2.0    && < 2.4
               , parsec           >= 2.0    && < 3.2
               , copilot-language >= 3.19.1 && < 3.20

  exposed-modules:
      Copilot.Library.Libraries
    , Copilot.Library.Clocks
    , Copilot.Library.LTL
    , Copilot.Library.PTLTL
    , Copilot.Library.Statistics
    , Copilot.Library.RegExp
    , Copilot.Library.Utils
    , Copilot.Library.Voting
    , Copilot.Library.Stacks
    , Copilot.Library.MTL

  ghc-options:
    -Wall

test-suite unit-tests
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  other-modules:
    Test.Copilot.Library.PTLTL
    Test.Extra

  build-depends:
      base
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2

    , copilot-interpreter
    , copilot-language
    , copilot-libraries
    , copilot-theorem

  hs-source-dirs:
    tests

  default-language:
    Haskell2010

  ghc-options:
    -Wall
