cabal-version:       >=1.10
name:                copilot-prettyprinter
version:             3.19.1
synopsis:            A prettyprinter of Copilot Specifications.
description:
  A prettyprinter of Copilot specifications.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

author:              Frank Dedden, Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordbyop Wegmann, Ivan Perez
license:             BSD3
license-file:        LICENSE
maintainer:          Ivan Perez <ivan.perezdominguez@nasa.gov>
homepage:            https://copilot-language.github.io
bug-reports:         https://github.com/Copilot-Language/copilot/issues
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md, CHANGELOG

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot.git
    subdir:     copilot-prettyprinter

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fno-warn-orphans

  build-depends:
    base   >= 4.9 && < 5,
    pretty >= 1.0 && < 1.2,

    copilot-core >= 3.19.1 && < 3.20

  exposed-modules:

    Copilot.PrettyPrint

  other-modules:

    Copilot.PrettyPrint.Error
    Copilot.PrettyPrint.Type
